--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,9 @@
   "require": {
     "php": ">=7.2",
     "workerman/webman-framework": "^1.5.0",
-    "monolog/monolog": "^2.0"
+    "monolog/monolog": "^2.0",
+    "topthink/think-validate": "^2.0",
+    "illuminate/database": "^10.46"
   },
   "suggest": {
     "ext-event": "For better performance. "
